--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@hapi/boom": "^9.1.2",
     "@koa/cors": "^3.1.0",
-    "crypto": "^1.0.1",
+    "bcryptjs": "^2.4.3",
     "fastest-validator": "^1.11.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
